# windows-os-agent

./: LICENSE  README.md  __init__.py  debug_data.json  live_ui_elements.json  mainwindow.py  pyproject.toml  requirements.txt  training_data.json
backup/: old_tools.py
configs/: agent.yaml  policies.yaml
modelfile/: deepseekocrModelfile.txt  gemma3Modelfile.txt  gpt-ossModelfile.txt
scripts/: generate_training_data.py  installer.ps1
src/: orchestrator.py  views.py
src/agent/executor/: executor_core.py  tools.py  vision_parser.py  vision_parser_train.py
src/agent/planner/: planner_client.py  react_prompt.txt  summarizer_prompt.txt  system_prompt.txt
src/agent/security/: policy.py
src/agent/utils/: logging.py
src/cursor/: default_corsor.cur  set_cursor.py
src/ui/: models.py  styles.qss  viewmodels.py
src/vision_parser/: vision_parser.py  vp_training_prepare.py
tests/: test_executor.py  test_planner.py  test_security.py
yedek/: react_prompt.txt
